# playbar2

./: .astylerc  .directory  .gitignore  CMakeLists.txt  Messages.sh  PlayBar2.kdev4  README.md  formatter.sh  install.sh  messages.sh  plasma-desktop.kwinrule  plasma_applet_audoban.applet.playbar.pot  plasma_engine_playbar.pot
engine/: #playbarengine.cpp#  .playbar.kcfg~  .~CMakeLists.txt  .~filetype.cpp  .~service.h  .~shortcuts.cpp  CMakeLists.txt  audoban.engine.playbar.operations  configdialog.cpp  configdialog.cpp~  configdialog.h  filetype.cpp  filetype.h  generalconfig.ui  generalwidget.cpp  generalwidget.h  plasma-dataengine-playbar.desktop  plasma-engine-playbar.desktop  playbar.cpp  playbar.h  playbar.kcfg  playbarengine.cpp  playbarengine.h  playbarjob.cpp  playbarjob.cpp~  playbarjob.h  playbarservice.cpp  playbarservice.cpp~  playbarservice.h  playbarservice.operations  playbarsettings.cpp  playbarsettings.h  playbarsettings.kcfgc  service.cpp  service.h  shortcuts.cpp  shortcuts.h
kcm_shortcuts/: CMakeLists.txt
kcm_shortcuts/src/: CMakeLists.txt  Messages.sh  kcm_playbarshortcuts.cpp  kcm_playbarshortcuts.desktop  kcm_playbarshortcuts.h  mprisservice.cpp  mprisservice.h
locale/es/LC_MESSAGES/: plasma_applet_playbar.mo
locale/ru/LC_MESSAGES/: plasma_applet_playbar.mo
locale/template/LC_MESSAGES/: messages.pot
plasmoid/: .metadata.desktop~  .plasmateprojectrc  .~CMakeLists.txt  CMakeLists.txt  metadata.desktop
plasmoid-systray/: CMakeLists.txt  metadata.desktop
plasmoid/contents/code/: .control.js~  .~control.js  control.js  utils.js
plasmoid/contents/config/: .main.xml~  config.qml  main.xml
plasmoid/contents/theme/playbar/: arrows-clear.svgz  arrows-opaque.svgz  audio-clear.svgz  audio-opaque.svgz  media-clear-bar.svgz  media-clear.svgz  media-opaque-bar.svgz  media-opaque.svgz  nocover.svgz  rating-clear.svgz  rating-opaque.svgz
plasmoid/contents/ui/: .Layout.qml~  .Mpris2.qml~  .RatingItem.qml~  .Slider.qml~  .TitlePopup.qml~  .main.qml~  .~main.qml  AutoscrollText.qml  CompactApplet.qml  CompactRepresentation.qml  CoverArt.qml  DefaultLayout.qml  Dialog.qml  Frame.qml  FullApplet.qml  FullRepresentation.qml  IconWidget.qml  Layout.qml  Layouts.qml  LayoutsResources.qml  MediaLayouts.qml  MediaPlayerArea.qml  Mpris2.qml  Notification.qml  PlaybackBar.qml  PlaybackItem.qml  PlaybackWidget.qml  PopupButton.qml  RatingItem.qml  SeekBar.qml  Slider.qml  SliderSeek.qml  SliderVolume.qml  SourceSelectorButton.qml  SystrayLayout.qml  TimeLabel.qml  TitleBar.qml  TitlePopup.qml  TrackInfo.qml  TrackInfoBar.qml  (+9 more)
plasmoid/contents/ui/config-ui/: General.qml
plasmoid/contents/ui/private/: InlineDialog.qml
plasmoid/locale/es/LC_MESSAGES/: playbar.po
plasmoid/locale/ru/LC_MESSAGES/: playbar.po
po/: plasma_applet_audoban.playbar.pot
po/de/: plasma_applet_audoban.applet.playbar.po  plasma_engine_playbar.po
po/es/: plasma_applet_audoban.applet.playbar.po  plasma_engine_playbar.po
po/pl/: plasma_applet_audoban.applet.playbar.po  plasma_engine_playbar.po
po/pt/: plasma_applet_audoban.applet.playbar.po  plasma_engine_playbar.po
po/ru/: plasma_applet_audoban.applet.playbar.po  plasma_engine_playbar.po
po/zh_CN/: plasma_applet_audoban.applet.playbar.po  plasma_engine_playbar.po
